--- a/deployment.yml
+++ b/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: arifislam/spring-bot:base
+        image: rahaman84/spring-bot:base
         ports:
         - containerPort: 8080
 ---
